# ToDo_API

./: .gitignore  README.md  hashing.py  main.py  models.py  pyproject.toml  requirements.txt  storage.py
app/: __init__.py  main.py  models.py
app/db/: __init__.py  database.py  models.py
app/routers/: storage.py  tasks.py
app/routers/tasks/: storage.py  tasks.py
app/schemas/: task.py
routers/: auth.py  tasks.py
